# server

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SECURITY.md  api.http  devshells.nix  flake.nix  rust-analyzer.json
.cargo/: audit.toml  config.toml
.circleci/: config.yml
.config/: nextest.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: docs.yml  lint.yml
.sqlx/: query-03ab2cd74ee72c874573f5373d1b274f93bcd7b1e33832336132466d12562d51.json  query-04f10e84426971238e7dd25e83e75e4139e05d7b0b7420d7db6247f9e2b6de0e.json  query-069ad9db5a2fd56ed581d2d17541c69599cc5b04ed4d6d56a209bec92c1931ac.json  query-0b0d5cd681e4dac079b70dcbeb5d2cb43b4fa094309b94be60474ad28cbfa1f6.json  query-0ec9bab7790dfd2c3014010714bea4cd6c36fb4a5bd9e2c9e3bda23e981f8340.json  query-0f97cfc9d9961904daa00581e9f0521ff2b3865b28c063ff317e6d6caf82d005.json  query-0fdc8b203d083405abc72c0be3e061d271a60013f3b4f62ece4146717494f36a.json  query-1012a599fd63f84527c0f197eb819aaedc6164d9395e886cf1862dbd8a108d42.json  query-11362d284830b9de70743332c3e6c0610fec70a34cae3c1388b684f86cec292a.json  query-13f75e061ccc4ac07d596168f716a4d3127d81cdaf1cfa6b4e716d2db7172e82.json  query-14459c299f5108ac575fdb60f3ad4e2249b3e1b6415ba97febf671770cdf47b4.json  query-1702c44f504d19d16a6c0bc94880d74f35754dbd22150337a02caaa304e3e2e6.json  query-1860915af47291fe425dd536ade0db4b8b18bc6083efcb685152ca5f740456bb.json  query-1a556b27a871c55f0c79f8237c86c4920a6418406988d8c98e5bedbfe2c2b85b.json  query-1ba271fe71deb2c4a059d0fc091fa79dff5c2d0ab881c4cfd76330d60d603a83.json  query-1d9739f9d79e70530c9337aec2f5c6756157de146062cee04c9c9aa2bb332818.json  query-1ea4a3f1d8f72d6aa47e63a6b10518dd2961b8f6e72189105959ad8cd065702f.json  query-1eaadedb31e8aa4638c49cb27017fc922039fa1a6026486be9024b4d26ed550c.json  query-20394f703d69eb5948fde0a581a10339150e05e89e472f8db95be457e2d9b5d5.json  query-2258dade23973182cf662135a707de7e4bbd5cdc095f22ceb7b77c6527484d5f.json  query-225f95a2d7c7d59127b17febd1b5629b48a04e17924a8403abee723f2e582ee4.json  query-2c24f92c93652489e67481878ab1f576c3e252c0e545c95812191a33daa208be.json  query-2dcfe22ca5e08175957d96ca3477a2c61c00a047bdfcfef4302f53878d3be5be.json  query-2ecafd9d41c252f48b0ada5b327fd851cda1011770d4e70c29e65c4b36bab74a.json  query-37da0e87e604647c9c1f0bdb4291466345f440c1c325804cb28a2d4f42dd221e.json  query-3a2c7774abb6922d72ac9abfed0a136138adb2f029207553f6afe870eecadaab.json  query-3af3b2219cf9dc89855442048b69ce1eacd701130dd2d671df077fd15cf79fee.json  query-3e42e83f38a1f2640fefaffdf49bf071538f872d5c4972255df3d0249d2a5cf8.json  query-4179ffc29a5ce022eacf73f2bc960d54c85898585224809e2e54f06d2ceeff9b.json  query-4560c237741ce9d4166aecd669770b3360a3ac71e649b293efb88d92c3254068.json  query-45789dbf10dd558cb9b2cb9807ad90a1dbbce7bf394be4ce102e96a62aa10737.json  query-464e88875aee2328e04c3617bd9cc85f7b5389f117a38ea678b5d623a88fe998.json  query-496da391d9dfeeabf99d701fe2df19ae830f5913435f5132a558343fa2dfbbd3.json  query-4c00c0c5726aed16c1fe61772b735bf41fbd392c26633d012b741340df6d8cd7.json  query-4ef2a3f49039f539c459c4da3686e0b56f8059e87ae93fe9412feefd2d7acea9.json  query-4f7a030dbcf7d22ff5ef5a4fc46f2934010ddf6e6d7e8d9fb7f6f67fd0608242.json  query-506068e073c992b539a536e1196e8a1a5061d8f24cc66b4c7ac81a079bcab0f8.json  query-509b9d3a7045e2663e357f46d6458503f578955fa635364aa1e09006571a2f01.json  query-563b6d224d9bcaadd197cf3751c45cd4732fcf1589fc82cc456bb90a2afbe06e.json  query-569ca56ab02d2785c96159f9ad4d2fc58c75edd998f0c2c3d6f7da7c9841b4aa.json  (+59 more)
css/: postcss.config.js
css/themes/: default.css  default.css.map  default.min.css  default.min.css.map
js/: disable-button-oncaptcha.js  functions._hs  plotly-strict-2.28.0.min.js.js  pluggy-connect.js  widget.min.js  widget.module.min.js
migrations/: 0003_add-uuid-constraint-to-expenses.sql  1_create_users_table.sql  1_schema.sql  20240904004921_create_users_table.down.sql  20240904004921_create_users_table.up.sql  20240904005021_create_expenses_table.down.sql  20240904005021_create_expenses_table.up.sql  20240904005119_add_uuid_constraint_to_expenses.down.sql  20240904005119_add_uuid_constraint_to_expenses.up.sql  20240904005131_create_pluggy_items_table.down.sql  20240904005131_create_pluggy_items_table.up.sql  20240928224920_complement-expenses-table.down.sql  20240928224920_complement-expenses-table.up.sql  20241212002523_more-categories.down.sql  20241216232151_origin-bank.down.sql  20241216232151_origin-bank.up.sql  20241218025611_external-category.down.sql  20241218025611_external-category.up.sql  20241218042446_even-more-categories.down.sql  20241218042446_even-more-categories.up.sql  2_create_expenses_table.sql  2_users.sql
src/: auth.rs  constant.rs  data.rs  data_router.rs  data_structs.rs  hypermedia_router.rs  main.rs  schema.rs  tasks.rs  templates.rs  util.rs
src/client/: classifier.rs  frc.rs  mail.rs  mod.rs  pluggy.rs  svix.rs
src/client/pluggy/: account.rs  auth.rs  mod.rs  transactions.rs
src/data/: auth.rs  expenses.rs  mod.rs  openfinance.rs  pluggy.rs  router.rs  service.rs
src/data/router/: auth.rs  expenses.rs  mod.rs  pluggy.rs
src/data/service/: auth.rs  expenses.rs  mod.rs
src/features/: expenses.rs  mod.rs  openfinance.rs  totp.rs  user.rs
src/hypermedia/: auth_service.rs  expenses_service.rs  mod.rs  router.rs  service.rs  validation_service.rs
src/hypermedia/router/: auth.rs  expenses.rs  mod.rs  validation.rs
src/hypermedia/schema/: auth.rs  mod.rs  validation.rs
src/hypermedia/service/: auth.rs  expenses.rs  mod.rs  pluggy.rs  validation.rs
src/queries/: expenses.rs  mod.rs  pluggy_items.rs  user.rs
templates/: about.html  auth.html  base.html  base_logged_in.html  change_password.html  confirmation.html  delete_expense_modal.html  editable_expense_row.html  expense_row.html  expenses.html  forgot_password.html  hello.html  mfa.html  pluggy_connect_widget.html  pluggy_widget_modal_error.html  privacy.html  signin.html  signup.html  terms.html  verify.html
