[package]
name = "finnish"
version = "0.1.10"
edition = "2021"
description = "Finnish is your personal finance manager."
repository = "github.com/nicolasauler/finnish"
keywords = ["finance", "personal finance", "budget", "money", "expenses", "income"]
categories = ["finance"]

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde-json"] }
askama_axum = "0.4.0"
axum = "0.7.5"
axum-helmet = "0.1.0"
axum-login = "0.15.0"
chrono = { version = "0.4.37", features = ["serde"] }
lettre = "0.11.6"
once_cell = "1.19.0"
password-auth = "1.1.0-pre.0"
plotly = { git = "https://github.com/nicolasauler/plotly.git" }
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shuttle-axum = "0.43.0"
shuttle-runtime = { version = "0.43.0", default-features = false, features = ["colored"] }
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
time = "0.3.34"
tokio = { version = "1.37.0", features = ["full"] }
totp-rs = { version = "5.5.1", features = ["qr"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
tower_governor = { version = "0.3.2", features = ["axum", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.17.0", features = ["derive"] }
zxcvbn = "2.2.2"
